# ownlock

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SECURITY_TESTING.md  UPGRADE.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release-announce.yml  release-binaries.yml
action/: action.yml
docs/: github-security.md
docs/blog/: 0.2.3-agent-shield.md  0.3.0-policies.md  broker-story.md  distribution.md
docs/maintainers/: LAUNCH.md
ownlock/: __init__.py  __main__.py  agent.py  audit.py  backups.py  cli.py  consoleutil.py  crypto.py  doctor.py  envfile.py  ghsync.py  guard.py  hookutil.py  keyring_util.py  mcp_server.py  passphrase.py  paths.py  policy.py  providers.py  redactor.py  resolver.py  rotation.py  scanner.py  share.py  shield.py  templates.py  vault.py
packaging/: README.md
packaging/homebrew/: ownlock.rb
packaging/winget/: thebscolaro.ownlock.0.2.2.yaml  thebscolaro.ownlock.installer.0.2.2.yaml  thebscolaro.ownlock.installer.0.3.2.yaml  thebscolaro.ownlock.locale.en-US.0.2.2.yaml
scripts/: build_standalone.sh  fill_winget_sha.sh  install.sh  post_devto.py  test-linux.sh
tests/: test_agent.py  test_audit.py  test_backups.py  test_cli.py  test_cli_interactive.py  test_consoleutil.py  test_crypto.py  test_doctor.py  test_doctor_golden.py  test_envfile.py  test_ghsync.py  test_growth_cli.py  test_guard.py  test_hook_exec.py  test_keyring_util.py  test_mcp_server.py  test_passphrase.py  test_policy.py  test_providers.py  test_redactor.py  test_resolver.py  test_rotation.py  test_scanner.py  test_security.py  test_share.py  test_shield.py  test_smoke.py  test_templates.py  test_vault.py
tests/golden/: doctor_output_shape.json
website/: CNAME  README.md  index.html  script.js  styles.css
