[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ownlock"
version = "0.1.5"
description = "Lightweight secrets manager — encrypted vault, env injection, stdout redaction. Optional MCP (stdio) delegates to CLI. No Docker, no cloud account."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ownly" }]
keywords = ["secrets", "vault", "env", "encryption", "cli", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0",
    "cryptography>=44.0",
    "keyring>=25.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]

[project.scripts]
ownlock = "ownlock.cli:app"
ownlock-mcp = "ownlock.mcp_server:main"

[project.urls]
Repository = "https://github.com/thebscolaro/ownlock"

[tool.pytest.ini_options]
testpaths = ["tests"]
