[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ownlock"
version = "0.3.2"
description = "Lightweight secrets manager — encrypted vault, env injection, stdout redaction. Optional MCP (stdio) delegates to CLI. No Docker, no cloud account."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ownly" }]
keywords = ["secrets", "vault", "env", "encryption", "cli", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0",
    # >=48.0.1: wheels before that ship a vulnerable statically-linked OpenSSL
    # (GHSA-537c-gmf6-5ccf / CVE-2026-34180).
    "cryptography>=48.0.1",
    "keyring>=25.0",
    "pygments>=2.20",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
dev = [
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.6.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
ownlock = "ownlock.cli:app"
ownlock-mcp = "ownlock.mcp_server:main"

[project.urls]
Repository = "https://github.com/thebscolaro/ownlock"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: end-to-end subprocess CLI checks (isolated HOME); run with pytest -m smoke or full suite",
]

[tool.coverage.run]
source = ["ownlock"]
omit = ["ownlock/__main__.py"]

[tool.coverage.report]
fail_under = 84
show_missing = true
skip_empty = true

# Subprocess is required for `ownlock run` and MCP delegation; argv lists, no shell.
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B404", "B603", "B608"]
